fixed problem with sidebar cutting off on scroll

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,9 +1,9 @@
 .sidebar {
 	background-color: $ukrave-teal;
-	height: 100%;
+	bottom: 0;
 	left:0;
 	padding-top: 1rem;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	width: 16rem;
 }
